add parallel options

--- a/hybrid_simulation_configuration.cfg
+++ b/hybrid_simulation_configuration.cfg
@@ -1,11 +1,11 @@
-genome1=group11_only_par1.fa
-genome2=group11_only_par2.fa
+genome1=group11_bir.fa
+genome2=group11_mal.fa
 mixture_prop_par1=0.75
 rec_rate_Morgans_kb=0.004
-num_indivs=10
+num_indivs=30
 gens_since_admixture=55
 chr_to_simulate=group11
-poly_perbp_par1=0.001
+poly_perbp_par1=0.0001
 poly_perbp_par2=0.0003
 rate_shared_poly_at_aims=0.01
 read_type=PE
@@ -13,5 +13,8 @@ read_length=100
 per_bp_indels=0.006
 sequencing_error=0.005
 number_reads=100000
-aim_freq_cutoff=0.95
 gens_drift_parental=
+aim_freq_cutoff=0.99
+job_submit_cmd=sbatch
+job_header=#!/bin/sh #SBATCH --ntasks=1 #SBATCH --cpus-per-task=1 --mem=32000 #SBATCH -p schumer #SBATCH --time=01:00:00
+num_indiv_per_job=2
