major changes - added macs and SELAM integration

--- a/hybrid_simulation_configuration.cfg
+++ b/hybrid_simulation_configuration.cfg
@@ -1,11 +1,11 @@
-genome1=group11_bir.fa
-genome2=group11_mal.fa
+genome1=
+genome2=
 mixture_prop_par1=0.75
-rec_rate_Morgans_kb=0.004
+rec_rate_Morgans_kb=0.00004
 num_indivs=30
 gens_since_admixture=55
 chr_to_simulate=group11
-poly_perbp_par1=0.0001
+poly_perbp_par1=0.001
 poly_perbp_par2=0.0003
 rate_shared_poly_at_aims=0.01
 read_type=PE
@@ -16,5 +16,13 @@ number_reads=100000
 gens_drift_parental=
 aim_freq_cutoff=0.99
 job_submit_cmd=sbatch
-job_header=#!/bin/sh #SBATCH --ntasks=1 #SBATCH --cpus-per-task=1 --mem=32000 #SBATCH -p schumer #SBATCH --time=01:00:00
+use_macs=1
+use_map=1
+SELAM_param_file=
+macs_params=60 20000000 -I 2 30 30 0 -t 0.001 -h 1e2 -r 0.001 -ej 2 2 1 -R recombination_map_for_macs.txt
+program_path=/home/groups/schumer/lab_member_folders/molly/Simulate_Ancestry_HMM_runs
+par1_for_aims=20
+par2_for_aims=20
+seq_params=
+job_header=#!/bin/sh #SBATCH --ntasks=1 #SBATCH --cpus-per-task=1 --mem=64000 #SBATCH -p schumer #SBATCH --time=02:00:00
 num_indiv_per_job=2
