--- a/hybrid_simulation_configuration_sourcepopdrift_example_parallel.cfg
+++ b/hybrid_simulation_configuration_sourcepopdrift_example_parallel.cfg
@@ -1,33 +1,33 @@
-genome1=group11_only_par1.fa
-genome2=group11_only_par2.fa
-use_ancestral=0
+genome1=group1.fa.gz
+genome2=
+use_ancestral=1
 mixture_prop_par1=0.5
-rec_rate_Morgans_kb=0.00004
+rec_rate_Morgans_kb=0.00002
 num_indivs=50
 gens_since_admixture=50
-chr_to_simulate=group11
+chr_to_simulate=group1
 poly_perbp_par1=0.001
 poly_perbp_par2=0.001
-rate_shared_poly_at_aims=0.01
+rate_shared_poly_at_aims=
 read_type=PE
 read_length=100
 per_bp_indels=0.006
 sequencing_error=0.005
 number_reads=100000
 cross_contam=
-parental_drift=0
-macs_par1_aims_pop=
-macs_par2_aims_pop=
+parental_drift=1
+macs_par1_aims_pop=3
+macs_par2_aims_pop=4
 aim_freq_cutoff=0.95
 job_submit_cmd=sbatch
-use_macs=0
+use_macs=1
 use_map=0
 SELAM_param_file=
 SELAM_selection_file=
-macs_params=
-program_path=/scratch/groups/schumer/molly/Simulate_Ancestry_HMM/Simulate_hybrid_genomes
-par1_for_aims=
-par2_for_aims=
+macs_params=240 10000000 -I 4 100 100 20 20 0 -t 0.001 -h 1e2 -r 0.001  -ej 0.05 3 1 -ej 0.051 4 2 -ej 2 2 1 -R recombination_map_for_macs.txt
+program_path=Simulate_hybrid_genomes
+par1_for_aims=20
+par2_for_aims=20
 seq_params=
 job_header=#!/bin/sh #SBATCH --ntasks=1 #SBATCH --cpus-per-task=1 --mem=64000 #SBATCH -p schumer #SBATCH --time=02:00:00
-num_indiv_per_job=2
+num_indiv_per_job=1
