--- a/hybrid_simulation_configuration_usergenomes_example_parallel.cfg
+++ b/hybrid_simulation_configuration_usergenomes_example_parallel.cfg
@@ -1,33 +1,33 @@
-genome1=group1_example.fa.gz
-genome2=
-use_ancestral=1
+genome1=group11_only_par1.fa.gz
+genome2=group11_only_par2.fa.gz
+use_ancestral=0
 mixture_prop_par1=0.5
-rec_rate_Morgans_kb=0.00002
+rec_rate_Morgans_kb=0.00004
 num_indivs=50
 gens_since_admixture=50
-chr_to_simulate=group1
+chr_to_simulate=group11
 poly_perbp_par1=0.001
 poly_perbp_par2=0.001
-rate_shared_poly_at_aims=
+rate_shared_poly_at_aims=0.01
 read_type=PE
 read_length=100
 per_bp_indels=0.006
 sequencing_error=0.005
-number_reads=25000
+number_reads=100000
 cross_contam=
 parental_drift=0
 macs_par1_aims_pop=
 macs_par2_aims_pop=
 aim_freq_cutoff=0.95
-job_submit_cmd=bash
-use_macs=1
+job_submit_cmd=sbatch
+use_macs=0
 use_map=0
 SELAM_param_file=
 SELAM_selection_file=
-macs_params=200 1000000 -I 2 100 100 0 -t 0.001 -h 1e2 -r 0.001 -ej 2 2 1 -R recombination_map_for_macs_section.txt
-program_path=./
-par1_for_aims=20
-par2_for_aims=20
+macs_params=
+program_path=Simulate_hybrid_genomes
+par1_for_aims=
+par2_for_aims=
 seq_params=
 job_header=#!/bin/sh #SBATCH --ntasks=1 #SBATCH --cpus-per-task=1 --mem=64000 #SBATCH -p schumer #SBATCH --time=02:00:00
-num_indiv_per_job=50
+num_indiv_per_job=2
